--- a/src/Container/Login/FormContainer.scss
+++ b/src/Container/Login/FormContainer.scss
@@ -14,3 +14,17 @@
         width: 100%;
     }
 }
+
+.link-to-container {
+    text-align: center;
+    a {
+        display: inline-block;
+        padding: 1rem;
+        text-decoration: none;
+        font-weight: 700;
+        color: #8c61ff;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+}
