--- a/src/Pages/LoginPage.scss
+++ b/src/Pages/LoginPage.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
 
-    .inner {
+    .login-container.inner {
         width: 468px;
         height: auto;
         background: #FFFFFF;
