Ver 0.0.8.1 - Some decorations

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,10 @@
-
+body {
+    color: #011627;
+    background: #FFFFFF;
+}
 
 .inner {
     max-width: 1024px;
     margin: 0 auto;
+    position: relative;
 }
