--- a/src/Components/Shared/Dialog.scss
+++ b/src/Components/Shared/Dialog.scss
@@ -1,7 +1,7 @@
 .dialog {
     padding: 1rem 2rem;
     border-radius: 2rem;
-    background: #86d84f;
+    background: #EFFFE9;
     margin-bottom: 1rem;
     margin-right: 1rem;
     animation-name: appear;
@@ -12,7 +12,7 @@
         margin: 0;
         padding: 0;
         border: none;
-        background: rgba(#000000,0);
+        background: rgba(white, 0);
     }
     h2 {
         margin: 0;
@@ -25,7 +25,7 @@
         font-weight: 500;
     }
     &.warning {
-        background: #e7581f;
+        background: #E71D36;
         color: #FFFFFF;
     }
 }
