--- a/src/Container/Home/HomePostsContainer.scss
+++ b/src/Container/Home/HomePostsContainer.scss
@@ -1,22 +1,8 @@
 .home-posts-container {
-
-    ul {
-        padding: 0;
-        margin: 0;
-        list-style: none;
-        li {
-            height: 6rem;
-            margin-bottom: 1rem;
-            border-radius: 1rem;
-            a {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 100%;
-                height: 100%;
-                border-radius: 1rem;
-                background: lightblue;
-            }
-        }
+    padding: 6rem 0;
+    h2 {
+        text-indent: 2rem;
+        font-size: 2rem;
+        margin-bottom: 2rem;
     }
 }
