--- a/src/Container/Post/PostContainer.scss
+++ b/src/Container/Post/PostContainer.scss
@@ -1,3 +1,53 @@
 .post-container {
-    background: lightblue;
+    .category {
+        text-indent: 2rem;
+        padding: 2rem 0 1rem;
+        font-size: 1.5rem;
+    }
+    h1 {
+        text-indent: 2rem;
+        padding: 2rem 0;
+        border-bottom: 1px solid #e5e5e5;
+        margin: 0;
+        .written-time {
+            padding-top: 1rem;
+            font-size: 1rem;
+            text-align: end;
+        }
+    }
+    .section--content {
+        border-bottom: 1px solid #e5e5e5;
+        .content-wrapper {
+            text-indent: 2rem;
+            padding: 4rem 0;
+            p {
+                margin: 0;
+            }
+        }
+        
+        .post-user-info-wrapper {
+            margin: 0 2rem 2rem;
+            box-sizing: border-box;
+            height: 8rem;
+            display: flex;
+            border: 1px solid #2EC4B6;
+            background: #EFFFE9;
+            align-items: center;
+            img {
+                display: block;
+                padding: 1rem;
+                height: 6rem;
+                width: 6rem;
+                border-radius: 50%;
+            }
+            .user-data {
+                font-weight: 700;
+                margin-left: 4rem;
+                font-size: 1.25rem;
+                div+div {
+                    margin-top: 0.5rem;
+                }
+            }
+        }
+    }
 }
