--- a/src/Components/Shared/ToggleMenu.scss
+++ b/src/Components/Shared/ToggleMenu.scss
@@ -25,6 +25,9 @@
             animation-duration: 0.4s;
             animation-fill-mode: forwards;
         }
+        svg {
+            margin-right: 1rem;
+        }
         li {
             display: flex;
             height: 4rem;
