--- a/src/Components/CategoryPage/CategoryPostsList.scss
+++ b/src/Components/CategoryPage/CategoryPostsList.scss
@@ -2,6 +2,28 @@ ul.category-posts-list {
     padding: 0;
     margin: 0;
     list-style: none;
+    .no-post-wrapper {
+        padding-top: 4rem;
+        text-align: center;
+        h2 {
+            margin: 2rem 0;
+            color: #E71D36;
+            font-size: 2rem;
+        }
+        h3 {
+            margin: 2rem 0;
+            color: #E71D36;
+            font-size: 1.5rem;
+        }
+        .no-post-img {
+            height: 20rem;
+            text-indent: -9999px;
+            background: url(../../img/no_post_img.svg);
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+    }
     li {
         height: 8rem;
         margin-bottom: 2rem;
