--- a/src/Container/Post/PostContainer.scss
+++ b/src/Container/Post/PostContainer.scss
@@ -1,4 +1,5 @@
 .post-container {
+    padding-bottom: 10rem;
     .category {
         text-indent: 2rem;
         padding: 2rem 0 1rem;
@@ -25,6 +26,15 @@
             }
         }
         
+        .buttons-wrapper {
+            display: flex;
+            justify-content: flex-end;
+            margin: 2rem;
+            button+button {
+                margin-left: 1rem;
+            }
+        }
+        
         .post-user-info-wrapper {
             margin: 0 2rem 2rem;
             box-sizing: border-box;
@@ -43,9 +53,94 @@
             .user-data {
                 font-weight: 700;
                 margin-left: 4rem;
-                font-size: 1.25rem;
-                div+div {
+                font-size: 1rem;
+                .nickname {
+                    font-size: 1.25rem;
+                }
+                .email {
                     margin-top: 0.5rem;
+                    font-weight: 400;
+                }
+                .phrase {
+                    margin-top: 0.5rem;
+                    font-weight: 600;
+                }
+            }
+        }
+    }
+    .section--comments {
+        h3 {
+            text-indent: 2rem;
+        }
+        ul.comments-wrapper {
+            margin: 0;
+            padding: 0 2rem;
+            list-style: none;
+
+            li {
+                position: relative;
+                margin: 1rem 1rem;
+                padding: 1rem 0;
+                border-bottom: 1px solid #2EC4B6;
+                .nickname {
+                    font-weight: 700;
+                    margin-bottom: 1rem;
+                    font-size: 1.1rem;
+                }
+                button.comment-delete-button {
+                    cursor: pointer;
+                    position: absolute;
+                    top: 2rem;
+                    right: 0;
+                    color: black;
+                    font-size: 2rem;
+                    line-height: 1;
+                    background: none;
+                    border: none;
+                    outline: none;
+                    &:hover {
+                        color: #FFFFFF;
+                    }
+                }
+            }
+        }
+        form.comment-form {
+            textarea.comment-input {
+                display: block;
+                height: 6rem;
+                margin: 1rem 2rem;
+                border: none;
+                outline: none;
+                background: none;
+                border: 1px solid rgba(#2EC4B6,0.5);
+                padding: 1rem;
+                width: calc(100% - 4rem);
+                resize: none;
+                box-sizing: border-box;
+                font-size: 1rem;
+                font-family: sans-serif;
+                &:focus {
+                    border: 1px solid #2EC4B6;
+                }
+            }
+            button.comment-button {
+                display: inline-block;
+                float: right;
+                cursor: pointer;
+                font-size: 1.25rem;
+                line-height: 1;
+                background: #2EC4B6;
+                outline: none;
+                border: none;
+                padding: 0 2rem;
+                font-weight: 700;
+                height: 3rem;
+                border-radius: 1.5rem;
+                color: #EFFFE9;
+                box-sizing: border-box;
+                margin-right: 2rem;
+                &:hover {
+                    background: rgba(#2EC4B6, 0.8);
                 }
             }
         }
