--- a/src/Pages/LoginPage.scss
+++ b/src/Pages/LoginPage.scss
@@ -4,21 +4,35 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background: rgba(#2EC4B6, 0.2);
 
     .inner {
         width: 468px;
         height: auto;
         background: #FFFFFF;
-        box-shadow: 0 3px 50px rgba(#343090, 0.3);
+        box-shadow: 0 5px 20px rgba(#2EC4B6, 0.2);
         border-radius: 2rem;
         padding: 1rem 0;
         
         h1 {
-            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+            color: #011627;
             text-align: center;
             margin: 3rem 0;
-            color: #343090;
             font-size: 3rem;
+        }
+
+        .link-to-container {
+            text-align: center;
+            a {
+                display: inline-block;
+                padding: 1rem;
+                text-decoration: none;
+                font-weight: 700;
+                color: #E71D36;
+                &:hover {
+                    text-decoration: underline;
+                }
+            }
         }
     }
 }
