--- a/src/Components/HomePage/NewPostButton.scss
+++ b/src/Components/HomePage/NewPostButton.scss
@@ -16,6 +16,7 @@
         font-size: 2rem;
         font-weight: 600;
         border: none;
+        outline: none;
         border-radius: 3rem;
         background:#EFFFE9;
         color: #2EC4B6;
