--- a/src/Components/UserSettingsPage/UserSetting.scss
+++ b/src/Components/UserSettingsPage/UserSetting.scss
@@ -1,9 +1,34 @@
 .user-setting-wrapper {
-
+    border-bottom: 1px solid rgba(#011627, 0.2);
+    h2 {
+        font-size: 1.5rem;
+        margin: 2rem 0;
+    }
+    h3 {
+        font-size: 1.25rem;
+        color: #2EC4B6;
+        font-weight: 400;
+        margin: 2rem 0 0.5rem;
+    }
+    input {
+        border: none;
+        outline: none;
+        background: none;
+        border: 1px solid #2EC4B6;
+        box-sizing: border-box;
+        padding: 0.5rem;
+        width: 100%;
+        font-size: 1rem;
+        &:focus {
+            border: 1.5px solid #2EC4B6;
+        }
+        margin-bottom: 2rem;
+    }
     img {
         display: block;
         height: 10rem;
         width: 10rem;
         border-radius: 50%;
+        margin-bottom: 1rem;
     }
 }
