--- a/src/Container/Unfound/UnfoundContainer.scss
+++ b/src/Container/Unfound/UnfoundContainer.scss
@@ -10,7 +10,7 @@
     .unfound-page-img {
         height: 20rem;
         text-indent: -9999px;
-        background: url(../../img/no_post_img.svg);
+        background: url(../../img/unfound_page_img.svg);
         background-size: contain;
         background-repeat: no-repeat;
         background-position: center;
