Ver 0.0.10.3 - some bugs fixed, some features added.

--- a/src/Components/CategoryPage/CategoryPostsList.scss
+++ b/src/Components/CategoryPage/CategoryPostsList.scss
@@ -57,9 +57,11 @@ ul.category-posts-list {
                 margin: 0;
             }
             p {
-                margin: 0;
-                display: flex;
-                max-lines: 1;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
             }
         }
         .list-userdata-container {
