--- a/src/Container/Post/PostContainer.scss
+++ b/src/Container/Post/PostContainer.scss
@@ -19,8 +19,7 @@
     .section--content {
         border-bottom: 1px solid #e5e5e5;
         .content-wrapper {
-            text-indent: 2rem;
-            padding: 4rem 0;
+            padding: 4rem 2rem;
             p {
                 margin: 0;
             }
