--- a/src/Container/Category/CategoryInfoContainer.scss
+++ b/src/Container/Category/CategoryInfoContainer.scss
@@ -3,12 +3,25 @@
     margin: 4rem 0;
     h2 {
         font-size: 2rem;
-        text-indent: 2rem;
         margin: 2rem 0;
+        margin-left: 2rem;
     }
     button {
         position: absolute;
         top: 0;
         right: 0;
+    }
+}
+
+@media (max-width: 876px) {
+    .category-info-container {
+        margin: 2rem 0;
+        h2 {
+            margin-left: 0;
+        }
+        button {
+            position: relative;
+            width: 100%;
+        }
     }
 }
