--- a/src/Components/CategoryPage/CategoryPostsList.scss
+++ b/src/Components/CategoryPage/CategoryPostsList.scss
@@ -44,49 +44,99 @@ ul.category-posts-list {
             &:hover {
                 background: rgba(#2EC4B6, 0.1);
             }
-        }
-
-        .list-category-container {
-            margin-left: 5%;
-            width: 10%;
-            font-size: 1.25rem;
-        }
-        .list-postdata-container {
-            width: 75%;
-            h3 {
-                margin: 0;
-            }
-            p {
-                overflow: hidden;
-                text-overflow: ellipsis;
-                display: -webkit-box;
-                -webkit-line-clamp: 2;
-                -webkit-box-orient: vertical;
-            }
-        }
-        .list-userdata-container {
-            width: 10%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 0.75rem;
-            .position-fixer {
-                height: 100%;
-                padding: 20% 0;
-                box-sizing: border-box;
-                img {
-                    display: block;
-                    margin: 0 auto;
-                    height: 60%;
-                    border-radius: 50%;
-                }
-                div {
-                    margin-top: 0.25rem;
+            .list-category-and-postdata {
+                width: 90%;
+                display: flex;
+                align-items: center;
+                .list-category-container {
+                    margin-left: 2.22%;
+                    width: 10%;
+                    margin-right: 2.22%;
+                    font-size: 1.25rem;
                     text-align: center;
                 }
+                .list-postdata-container {
+                    width: 80%;
+                    h3 {
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 1;
+                        -webkit-box-orient: vertical;
+                        margin: 0;
+                    }
+                    p {
+                        overflow: hidden;
+                        text-overflow: ellipsis;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
+                        -webkit-box-orient: vertical;
+                    }
+                }
             }
-            
+            .list-userdata-container {
+                width: 10%;
+                height: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 0.75rem;
+                .position-fixer {
+                    width: 100%;
+                    height: 100%;
+                    padding: 20% 0;
+                    box-sizing: border-box;
+                    img {
+                        max-width: 100%;
+                        display: block;
+                        margin: 0 auto;
+                        max-height: 60%;
+                        border-radius: 50%;
+                    }
+                    div {
+                        margin-top: 0.25rem;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 876px) {
+    ul.category-posts-list {
+        li {
+            margin-bottom: 1rem;
+            border-radius: 0;
+            a {
+                border-radius: 0;
+                box-shadow: unset;
+                flex-direction: row-reverse;
+                .list-category-and-postdata {
+                    width: 81%;
+                    display: block;
+                    margin-right: 2%;
+                    margin-left: 2%;
+                    font-size: 0.8rem;
+                    
+                    .list-category-container {
+                        width: 100%;
+                        font-size: 1.1rem;
+                        margin: 0;
+                        text-align: left;
+                        padding-bottom: 0.5rem;
+                    }
+                    .list-postdata-container {
+                        flex-grow: 1;
+                        margin: 0;
+                        width: 100%;
+                    }
+                }
+                .list-userdata-container {
+                    width: 15%;
+                    margin-left: 2%;
+                }
+            }
         }
     }
 }
