--- a/src/Components/HomePage/NewPostButton.scss
+++ b/src/Components/HomePage/NewPostButton.scss
@@ -29,3 +29,12 @@
         }
     }
 }
+
+@media (max-width: 876px) {
+    .new-post-button-wrapper.inner{
+        .new-post-button {
+            width: 90%;
+            font-size: 1.75rem;
+        }        
+    }
+}
