--- a/src/Components/UserSettingsPage/CategorySetting.scss
+++ b/src/Components/UserSettingsPage/CategorySetting.scss
@@ -18,7 +18,7 @@
         }
     }
     .input-wrapper {
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
         height: 3rem;
         display: flex;
         input {
@@ -57,5 +57,13 @@
     }
     button.small-btn {
         float: right;
+    }
+}
+
+@media (max-width: 876px) {
+    .category-setting-wrapper {
+        button.small-btn {
+            width: 100%;
+        }
     }
 }
