--- a/src/Components/WritingPage/CategoryAndTitle.scss
+++ b/src/Components/WritingPage/CategoryAndTitle.scss
@@ -1,10 +1,19 @@
+
+.editor-container.inner {
+    h1 {
+        margin-top: 4rem;
+        font-size: 2rem;
+        padding-left: 2rem;
+    }
+}
+
 .category-title-wrapper {
     height: 8rem;
     margin: 2rem 0;
     select {
         margin: 2rem;
         display: block;
-        width: 20%;
+        width: 10rem;
         height: 37.5%;
         border: none;
         outline: none;
@@ -29,6 +38,24 @@
         box-sizing: border-box;
         &:focus {
             border-bottom: 1.5px solid #2EC4B6;
+        }
+    }
+}
+
+@media (max-width: 876px) {
+    .editor-container.inner {
+        h1 {
+            margin-top: 2rem;
+            padding-left: 0;
+        }
+    }
+    .category-title-wrapper {
+        select {
+            margin: 0;
+        }
+        input {
+            margin: 2rem 1rem;
+            width: calc(100% - 2rem);
         }
     }
 }
