--- a/src/Container/Dialog/DialogContainer.scss
+++ b/src/Container/Dialog/DialogContainer.scss
@@ -1,11 +1,13 @@
 .dialog-container {
     position: fixed;
+    width: 100%;
     bottom: 0;
     right: 0;
-    width: 500px;
+    max-width: 500px;
     height: auto;
     margin: 0;
     padding: 0;
     z-index: 1000;
     list-style: none;
 }
+
