--- a/src/Container/Home/HomePostsContainer.scss
+++ b/src/Container/Home/HomePostsContainer.scss
@@ -1,8 +1,14 @@
-.home-posts-container {
+.home-posts-container.inner {
     padding: 6rem 0;
     h2 {
         text-indent: 2rem;
         font-size: 2rem;
         margin-bottom: 2rem;
+    }
+}
+
+@media (max-width: 876px) {
+    .home-posts-container.inner {
+        padding: 3rem 0;
     }
 }
